syntax = "proto3";

package fitfinder.proto;

import "Protos/user_profile.proto";

option csharp_namespace = "FitFinderService.Proto";

service UserProtocol {	
	rpc ConnectUser(ConnectUserRequest) returns (stream ConnectUserResponse);
}

message ConnectUserRequest {
	string googleTokenId = 1;
}

message ConnectUserResponse {
	enum Status {
		Verifying = 0;
		Creating = 1;
		Retrieving = 2;
		Connected = 3;
		Failed = 4;
	}
	Status status = 1;
	UserProfile userProfile = 2;
}